--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -329,7 +329,7 @@
   "signup.retype-password": "Re-type password",
   "signup.user-already-validated": "This user already validated the email address",
   "signup.validation-email-resent": "The validation email was resent.",
-  "signup.welcome": "Welcome, {name}!",
+  "signup.welcome": "Welcome,<br/>{name}!",
   "signup.whitelist.email": "Email {email} is not allowed by admin",
   "signup.with-email": "Signup with email",
   "signup.your-firstname": "Your firstname",
