--- a/lib/translations/lib/it.json
+++ b/lib/translations/lib/it.json
@@ -292,7 +292,7 @@
   "signup.retype-password": "Redigitare la password",
   "signup.user-already-validated": "Questo cittadino già convalidato l'indirizzo e-mail",
   "signup.validation-email-resent": "L'e-mail di convalida era risentirsi.",
-  "signup.welcome": "Benvenuto, {name}!",
+  "signup.welcome": "Benvenuto,<br/>{name}!",
   "signup.whitelist.email": "Email {email} non è consentito dall'amministratore",
   "signup.with-email": "Registrazione con indirizzo e-mail",
   "signup.your-firstname": "Tuo primo nome",
