--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -470,5 +470,6 @@
   "validators.min-length.singular": "It must be at least 1 character",
   "validators.not.match": "No match",
   "validators.password.not.match": "Passwords do not match",
-  "validators.required": "Required"
+  "validators.required": "Required",
+  "common.custom": "Organization"
 }
