export users RC1

--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -110,6 +110,7 @@
   "admin-topics.list.title": "Règlement intérieur",
   "admin-users-form.disabled": "inactif",
   "admin-users-form.enabled": "actif",
+  "admin-users.export.all-users": "Exporter tous les utilisateurs au format CSV",
   "admin-users.list.add-tag": "Nouveau",
   "admin-users.list.search.placeholder": "Rechercher un utilisateur...",
   "admin-users.list.sort": "Trier / Filtrer",
@@ -189,7 +190,7 @@
   "comments.your.arguments": "Vous",
   "comments.your.placeholder": "Saisir votre contribution",
   "common.add": "Ajouter",
-  "common.app-name": "crm.paris.fr",
+  "common.app-name": "DemocracyOS",
   "common.back": "Retour",
   "common.cancel": "Annuler",
   "common.close": "Ferme",
@@ -202,6 +203,12 @@
   "common.read-more": "Lire la suite",
   "common.save": "Sauvegarder",
   "common.topic": "Débat",
+  "common.email": "Email",
+  "common.email-validated": "Email valide",
+  "common.date": "Date",
+  "common.date.create": "Création",
+  "common.date.signup": "Inscription",
+  "common.date.update": "Modification",
   "democracyos.markdown.flavored": "Editeur Markdown personnalisé de DemocracyOS",
   "forgot.error.email-not-valid": "Vous devez valider votre adresse email avant de pouvoir réinitialiser votre mot de passe",
   "forgot.explanation": "Vous allez recevoir par email un lien pour rétablir votre mot de passe",
