Tag UX changes : - better list - add color and icon classes input - ipsum generator

--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -46,9 +46,12 @@
   "admin-tags-form.button.submit": "Sauvegarder",
   "admin-tags-form.label.image": "Image",
   "admin-tags-form.label.name": "Nom",
+  "admin-tags-form.label.color": "Couleur",
+  "admin-tags-form.label.icon": "Icone",
   "admin-tags-form.message.onsuccess": "Catégorie sauvegardée avec succès",
   "admin-tags-form.message.validation.name-required": "Nom requis",
   "admin-tags-form.placeholder.name": "Nom de la catégorie",
+  "admin-tags-form.placeholder.css": "Classes CSS",
   "admin-tags-form.title.create": "Nouvelle catégorie",
   "admin-tags-form.title.edit": "Modifier la catégorie",
   "admin-tags.list.add-tag": "Nouvelle",
