--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -46,9 +46,12 @@
   "admin-tags-form.button.submit": "Save",
   "admin-tags-form.label.image": "Image",
   "admin-tags-form.label.name": "Name",
+  "admin-tags-form.label.color": "Color",
+  "admin-tags-form.label.icon": "Icon",
   "admin-tags-form.message.onsuccess": "Category successfully saved",
   "admin-tags-form.message.validation.name-required": "Name required",
   "admin-tags-form.placeholder.name": "Category name",
+  "admin-tags-form.placeholder.css": "CSS classes",
   "admin-tags-form.title.create": "Create category",
   "admin-tags-form.title.edit": "Edit category",
   "admin-tags.list.add-tag": "New",
