forum settings (`/admin`)

--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -4,6 +4,7 @@
   "404.not-exists": "Cette page n'existe pas",
   "add-user-input.placeholder": "Ajouter une personne",
   "admin-comments.dowload-as-csv": "Télécharger tous les commentaires au format .csv",
+  "admin-general.form.title": "Paramêtres généraux",
   "admin-permissions.revoke": "Révoquer",
   "admin-permissions.revoke.confirm.text": "Êtes-vous sûr de vouloir révoquer les autorisations '{role}' à '{user}'?",
   "admin-permissions.roles.admin.description": "Les administrateurs peuvent accorder des autorisations à d'autres utilisateurs, modifier les paramètres du forum et gérer le contenu (créer et modifier des débats, etc.).",
@@ -35,6 +36,7 @@
   "admin-permissions.visibility.public.title": "Ouvert à tous",
   "admin-permissions.visibility.title": "Visibilité",
   "admin-sidebar.comments.title": "Commentaires",
+  "admin-sidebar.general.title": "Général",
   "admin-sidebar.permissions.title": "Autorisations",
   "admin-sidebar.tags.create": "Créer",
   "admin-sidebar.tags.list": "Liste",
@@ -44,14 +46,14 @@
   "admin-sidebar.topics.title": "Débats",
   "admin-sidebar.whitelists.title": "Utilisateurs autorisés",
   "admin-tags-form.button.submit": "Sauvegarder",
-  "admin-tags-form.label.image": "Image",
-  "admin-tags-form.label.name": "Nom",
   "admin-tags-form.label.color": "Couleur",
   "admin-tags-form.label.icon": "Icone",
+  "admin-tags-form.label.image": "Image",
+  "admin-tags-form.label.name": "Nom",
   "admin-tags-form.message.onsuccess": "Catégorie sauvegardée avec succès",
   "admin-tags-form.message.validation.name-required": "Nom requis",
-  "admin-tags-form.placeholder.name": "Nom de la catégorie",
   "admin-tags-form.placeholder.css": "Classes CSS",
+  "admin-tags-form.placeholder.name": "Nom de la catégorie",
   "admin-tags-form.title.create": "Nouvelle catégorie",
   "admin-tags-form.title.edit": "Modifier la catégorie",
   "admin-tags.list.add-tag": "Nouvelle",
@@ -85,6 +87,7 @@
   "admin-topics-form.description.authorUrl": "",
   "admin-topics-form.description.closingAt": "Si le sujet a une date de clôture, personne ne pourra voter après cette date",
   "admin-topics-form.description.coverUrl": "",
+  "admin-topics-form.description.forum-tags": "Tags suggérés",
   "admin-topics-form.description.mediaTitle": "",
   "admin-topics-form.description.poll-options": "",
   "admin-topics-form.description.resources": "Les liens de ressources externes seront listés à la fin du débats",
@@ -92,7 +95,6 @@
   "admin-topics-form.description.summary": "",
   "admin-topics-form.description.tag": "",
   "admin-topics-form.description.tags": "Tags du débat, pour chaque entrée tapez sur Entrer ou Tabulation",
-  "admin-topics-form.description.forum-tags": "Tags suggérés",
   "admin-topics-form.description.topicId": "Identifiant officiel",
   "admin-topics-form.label.action": "Action",
   "admin-topics-form.label.attrs": "Attributs",
@@ -215,14 +217,14 @@
   "forgot.reset": "Réinitialiser votre mot de passe !",
   "form.please-wait": "S'il vous plaît, attendez",
   "form.send": "Envoyer",
-  "forum.form.cover": "Lien vers une image pour illustrer la consultation",
+  "forum.form.cover": "Image URL",
   "forum.form.create.submit": "Créer",
   "forum.form.summary.label": "Description",
   "forum.form.summary.placeholder": "Quel est l'objet de votre consultation ?",
   "forum.form.title": "Créer mon espace DemocracyOS",
-  "forum.form.title.label": "Titre de mon espace",
+  "forum.form.title.label": "Nom",
   "forum.form.title.placeholder": "Le nom de votre consultation",
-  "forum.form.url.label": "URL de votre consultation",
+  "forum.form.url.label": "Chemin",
   "forum.form.url.unavailable": "L'URL n'est pas disponible",
   "forum.status.creating": "Création de votre consultation...",
   "forum.status.destroying": "Suppression...",
@@ -421,8 +423,6 @@
   "validators.checked": "Le champ coché est obligatoire",
   "validators.input.not-exists": "L'élément {name} n'existe pas",
   "validators.invalid": "Invalide",
-  "validators.invalid.author": "Invalid author",
-  "validators.invalid.email": "Invalid email address",
   "validators.invalid.author": "Auteur invalide",
   "validators.invalid.email": "Adresse email invalide",
   "validators.invalid.firstname": "Prénom invalide",
