--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -4,6 +4,7 @@
   "404.not-exists": "This page does not exist",
   "add-user-input.placeholder": "Add a person",
   "admin-comments.dowload-as-csv": "Download all as .csv",
+  "admin-general.form.title": "General properties",
   "admin-permissions.revoke": "Revoke",
   "admin-permissions.revoke.confirm.text": "Are you sure you want to rovoke '{role}' permissions to '{user}'?",
   "admin-permissions.roles.admin.description": "Administrators can give permissions to other users, edit forum settings, and manage the content (create and edit topics, etc).",
@@ -35,6 +36,7 @@
   "admin-permissions.visibility.public.title": "Open for All",
   "admin-permissions.visibility.title": "Visibility",
   "admin-sidebar.comments.title": "Comments",
+  "admin-sidebar.general.title": "General",
   "admin-sidebar.permissions.title": "Privileges",
   "admin-sidebar.tags.create": "Create",
   "admin-sidebar.tags.list": "List",
@@ -44,14 +46,14 @@
   "admin-sidebar.topics.title": "Topics",
   "admin-sidebar.whitelists.title": "Enabled users",
   "admin-tags-form.button.submit": "Save",
-  "admin-tags-form.label.image": "Image",
-  "admin-tags-form.label.name": "Name",
   "admin-tags-form.label.color": "Color",
   "admin-tags-form.label.icon": "Icon",
+  "admin-tags-form.label.image": "Image",
+  "admin-tags-form.label.name": "Name",
   "admin-tags-form.message.onsuccess": "Category successfully saved",
   "admin-tags-form.message.validation.name-required": "Name required",
-  "admin-tags-form.placeholder.name": "Category name",
   "admin-tags-form.placeholder.css": "CSS classes",
+  "admin-tags-form.placeholder.name": "Category name",
   "admin-tags-form.title.create": "Create category",
   "admin-tags-form.title.edit": "Edit category",
   "admin-tags.list.add-tag": "New",
@@ -85,6 +87,7 @@
   "admin-topics-form.description.authorUrl": "",
   "admin-topics-form.description.closingAt": "If the topic has a closing date, anyone will be able to vote after that date",
   "admin-topics-form.description.coverUrl": "",
+  "admin-topics-form.description.forum-tags": "Suggested tags",
   "admin-topics-form.description.mediaTitle": "",
   "admin-topics-form.description.poll-options": "",
   "admin-topics-form.description.resources": "Reference links to be listed at the end of the topic",
@@ -92,7 +95,6 @@
   "admin-topics-form.description.summary": "",
   "admin-topics-form.description.tag": "",
   "admin-topics-form.description.tags": "Tags for the topic, submit with ENTER or TAB",
-  "admin-topics-form.description.forum-tags": "Suggested tags",
   "admin-topics-form.description.topicId": "Unique identifier for this topic",
   "admin-topics-form.label.action": "Action",
   "admin-topics-form.label.attrs": "Attributes",
@@ -215,14 +217,14 @@
   "forgot.reset": "Reset Password!",
   "form.please-wait": "Please wait",
   "form.send": "Send",
-  "forum.form.cover": "Cover image",
+  "forum.form.cover": "Image URL",
   "forum.form.create.submit": "Create",
   "forum.form.summary.label": "Summary",
   "forum.form.summary.placeholder": "What is your democracy about?",
   "forum.form.title": "Create my DemocracyOS",
   "forum.form.title.label": "Democracy Title",
-  "forum.form.title.placeholder": "The title for your democracy",
-  "forum.form.url.label": "Democracy URL",
+  "forum.form.title.placeholder": "The title for your forum",
+  "forum.form.url.label": "Path",
   "forum.form.url.unavailable": "URL is not available",
   "forum.status.creating": "Creating democracy...",
   "forum.status.destroying": "Destroying...",
