--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -411,6 +411,9 @@
   "signup.with-email": "Signup with email",
   "signup.your-firstname": "Your firstname",
   "signup.your-lastname": "Your lastname",
+  "system.title": "Global settings",
+  "system.sidebar.forums": "Forums",
+  "system.sidebar.users": "Users",
   "sorts.by-title-asc": "By title A -> Z",
   "sorts.closing-soon": "Closing soon",
   "sorts.newest-first": "Newest first",
