--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -417,6 +417,9 @@
   "sorts.newest-first": "Plus récents d'abord",
   "sorts.oldest-first": "Plus anciens d'abord",
   "sorts.recently-updated": "Mis à jour récemment",
+  "system.title": "Paramêtres globaux",
+  "system.sidebar.forums": "Consultations",
+  "system.sidebar.users": "Utilisateurs",
   "topics.actions.cause.do": "Soutenir",
   "topics.actions.cause.done": "Vous soutenez",
   "topics.actions.poll.do": "Voter",
