--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -239,6 +239,7 @@
   "help.faq.title": "Aide / FAQ",
   "help.glossary.title": "Glossaire",
   "help.markdown.title": "Mise en forme des textes",
+  "help.legal.title": "Mentions légales",
   "help.pp.title": "Confidentialité",
   "help.title": "Assistance",
   "help.tos.title": "Conditions d'utilisation",
