--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -239,6 +239,7 @@
   "help.faq.title": "FAQ",
   "help.glossary.title": "Glossary",
   "help.markdown.title": "Formatting help",
+  "help.legal.title": "Legal terms",
   "help.pp.title": "Privacy Policy",
   "help.title": "Help",
   "help.tos.title": "Terms of Service",
