--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -218,10 +218,10 @@
   "form.please-wait": "S'il vous plaît, attendez",
   "form.send": "Envoyer",
   "forum.form.cover": "Image URL",
-  "forum.form.create.submit": "Créer",
+  "forum.form.create.submit": "Créer une consultation",
   "forum.form.summary.label": "Description",
   "forum.form.summary.placeholder": "Quel est l'objet de votre consultation ?",
-  "forum.form.title": "Créer mon espace DemocracyOS",
+  "forum.form.title": "Créer un espace de consultation",
   "forum.form.title.label": "Nom",
   "forum.form.title.placeholder": "Le nom de votre consultation",
   "forum.form.url.label": "Chemin",
@@ -229,6 +229,7 @@
   "forum.status.creating": "Création de votre consultation...",
   "forum.status.destroying": "Suppression...",
   "forum.status.error": "Une erreur s'est produite, merci de recommencer plus tard.",
+  "forum.list.search.placeholder": "Rechercher une consultation ...",
   "header.admin": "Gérer",
   "header.forums": "Mes consultations",
   "header.insecure-warning": "Avertissement: Vous utilisez une version non sécurisée de DemocracyOS. Consultez la documentation pour plus de détails sur la mise en place du SSL.",
