add system/user-badges add system/tags

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -323,9 +323,10 @@
   "settings-forums.delete.confirmation.title": "Are you ABSOLUTELY sure?",
   "settings-notifications.no": "No",
   "settings-notifications.yes": "Yes",
-  "settings.badge": "Badge",
-  "settings.badge.not-empty": "Badge cannot be empty",
-  "settings.badge.success": "The badge was successfuly updated",
+  "settings.badge": "Sticker",
+  "settings.badge.not-empty": "Sticker name cannot be empty",
+  "settings.badge.success": "The sticker was successfuly updated",
+  "settings.badge.placeholder": "The name of your sticker",
   "settings.change-at-gravatar": "Change your profile picture at gravatar.com",
   "settings.change-password": "Change password",
   "settings.confirm-password": "Confirm new password",
@@ -362,10 +363,12 @@
   "settings.profile": "Profile",
   "settings.profile-picture": "Profile Picture",
   "settings.save": "Save",
+  "settings.add": "Add",
   "settings.sidebar.forums": "Democracies",
   "settings.successfuly-updated": "Your profile was successfuly updated",
   "settings.title": "Settings",
-  "settings.user-badges": "User badges",
+  "system.user-badges": "Stickers",
+  "system.user-badges.title": "User stickers",
   "sidebar.closed": "Closed",
   "sidebar.hide-voted": "Hide voted by me",
   "sidebar.open": "Open",
@@ -439,5 +442,6 @@
   "validators.min-length.singular": "It must be at least 1 character",
   "validators.not.match": "No match",
   "validators.password.not.match": "Passwords do not match",
-  "validators.required": "Required"
+  "validators.required": "Required",
+  "validators.color.hex": "Invalid Hex value (ex: #337ab7)"
 }
