--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -5,6 +5,7 @@
   "add-user-input.placeholder": "Ajouter une personne",
   "admin-comments.dowload-as-csv": "Télécharger tous les commentaires au format .csv",
   "admin-general.form.title": "Paramêtres généraux",
+  "admin-general.message.onsuccess": "Informations sauvegardées avec succès",
   "admin-permissions.revoke": "Révoquer",
   "admin-permissions.revoke.confirm.text": "Êtes-vous sûr de vouloir révoquer les autorisations '{role}' à '{user}'?",
   "admin-permissions.roles.admin.description": "Les administrateurs peuvent accorder des autorisations à d'autres utilisateurs, modifier les paramètres du forum et gérer le contenu (créer et modifier des débats, etc.).",
@@ -59,7 +60,7 @@
   "admin-tags.list.add-tag": "Nouvelle",
   "admin-tags.list.search.placeholder": "Rechercher une catégorie ...",
   "admin-tags.list.title": "Liste des catégories",
-  "admin-topics-form.action.cause": "Soutien",
+  "admin-topics-form.action.cause": "Pétition",
   "admin-topics-form.action.none": "Aucune",
   "admin-topics-form.action.poll": "Sondage",
   "admin-topics-form.action.vote": "Vote",
