Add login with Google (OAuth2)

--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -381,6 +381,7 @@
   "signin.dont-have-account": "Avez-vous un compte ?",
   "signin.error.email-not-valid": "L'adresse e-mail de cet utilisateur n'est pas validée. Nous envoyons un email de bienvenue aux utilisateurs lors de leur inscription. Veuillez vérifier votre e-mail (y compris votre dossier spam) et cliquez sur le lien fourni dans l'email. Cliquez <a href='/signup/resend-validation-email'>ici</a> si vous souhaitez revevoir de nouveau un email de bienvenue.",
   "signin.error.using-facebook": "L'adresse email est utilisée pour vous connecter avec Facebook",
+  "signin.error.using-google": "L'adresse email est utilisée pour vous connecter avec Google",
   "signin.errors.attempt-too-soon": "Le compte a été verrouillé en raison de trop de tentatives de connexion échouées",
   "signin.errors.incorrect-password": "Mot de passe ou email incorrect",
   "signin.errors.incorrect-username": "Mot de passe ou email incorrect",
@@ -390,6 +391,7 @@
   "signin.login-to": "Se connecter",
   "signin.login-with-email": "Se connecter via email",
   "signin.login-with-facebook": "Se connecter avec Facebook",
+  "signin.login-with-google": "Se connecter avec Google",
   "signin.or-login-with-email": "ou connectez-vous via email",
   "signin.signup": "S'inscrire",
   "signup.accepting": "En vous inscrivant, vous acceptez nos",
