--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -381,6 +381,7 @@
   "signin.dont-have-account": "Don't have an account?",
   "signin.error.email-not-valid": "The email address for this user is not validated. We send users a welcome email when they sign up. Please check your email (remember to check your spam folder too) and click on the link supplied on the email. Click <a href='/signup/resend-validation-email'>here</a> if you need the welcome email to be resent",
   "signin.error.using-facebook": "The email address is being used to login with Facebook",
+  "signin.error.using-google": "The email address is being used to login with Google",
   "signin.errors.attempt-too-soon": "Account locked due to too many failed login attempts",
   "signin.errors.incorrect-password": "Password or email are incorrect",
   "signin.errors.incorrect-username": "Password or email are incorrect",
@@ -390,6 +391,7 @@
   "signin.login-to": "Login to",
   "signin.login-with-email": "Login with email",
   "signin.login-with-facebook": "Login with Facebook",
+  "signin.login-with-google": "Login with Google",
   "signin.or-login-with-email": "or login with email",
   "signin.signup": "Signup",
   "signup.accepting": "By signing up you are accepting our",
