User extra field RC1 : - age (list) - postal code - job (list) - all optional
TODO
- Require fields + facebook / google callback for input
- Postal code validation @ signup

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -452,5 +452,36 @@
   "validators.color.hex": "Invalid Hex value (ex: #337ab7)",
   "system.users.message.onsuccess": "User saved successfully",
   "system.users.title.edit": "Edit user",
-  "system.users.title.create": "Add user"
+  "system.users.title.create": "Add user",
+  "user.extra.age.label": "Age",
+  "user.extra.age.1": "less than 15",
+  "user.extra.age.2": "15-19",
+  "user.extra.age.3": "20-24",
+  "user.extra.age.4": "25-29",
+  "user.extra.age.5": "30-34",
+  "user.extra.age.6": "35-39",
+  "user.extra.age.7": "40-44",
+  "user.extra.age.8": "45-49",
+  "user.extra.age.9": "50-54",
+  "user.extra.age.10": "55-59",
+  "user.extra.age.11": "60-64",
+  "user.extra.age.12": "65-69",
+  "user.extra.age.13": "70-74",
+  "user.extra.age.14": "75 or more",
+  "user.extra.age.short.1": "less than 18",
+  "user.extra.age.short.2": "18-29",
+  "user.extra.age.short.3": "30-49",
+  "user.extra.age.short.4": "50-65",
+  "user.extra.age.short.5": "65 or more",
+  "user.extra.job.label": "Activity",
+  "user.extra.job.1": "Student",
+  "user.extra.job.2": "Company",
+  "user.extra.job.3": "Public agent",
+  "user.extra.job.4": "Professional",
+  "user.extra.job.5": "Artisan",
+  "user.extra.job.5": "Retired",
+  "user.extra.job.5": "Unemployed",
+  "user.extra.job.5": "Other",
+  "user.extra.postal.label": "Postal code",
+  "user.extra.postal.validator": "Invalid postal code (FR)"
 }
