EU cookie compliance (FR,EN)

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -201,6 +201,7 @@
   "comments.your.arguments": "Your arguments",
   "common.app-name": "DemocracyOS",
   "common.auth-error": "The request is unauthorized.",
+  "common.accept": "Got it!",
   "common.back": "Back",
   "common.cancel": "Cancel",
   "common.close": "Closes",
@@ -213,6 +214,9 @@
   "common.or": "or",
   "common.pass-match-error": "Don't match.",
   "common.read-more": "Read more",
+  "cookie.allow": "Allow cookies",
+  "cookie.decline": "Decline",
+  "cookie.message": "This website uses cookies to ensure you get the best experience on our website.",
   "democracyos.markdown.flavored": "DemocracyOS flavored markdown",
   "forgot.error.email-not-valid": "You must validate your email address before you can reset your account password",
   "forgot.explanation": "We will send an email with a link to reset your password",
