--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -195,6 +195,7 @@
   "comments.votes": "votes",
   "comments.your-argument": "Votre commentaire",
   "comments.your.arguments": "Vos commentaires",
+  "common.accept": "J'ai compris",
   "common.app-name": "DemocracyOS",
   "common.auth-error": "La requête n'est pas autorisée.",
   "common.back": "Retour",
@@ -209,6 +210,9 @@
   "common.or": "ou",
   "common.pass-match-error": "Ne correspondent pas.",
   "common.read-more": "Lire la suite",
+  "cookie.allow": "Autoriser les cookies",
+  "cookie.decline": "Refuser",
+  "cookie.message": "Ce site utilise des cookies pour l'authentification et une expérience de navigation optimale.",
   "democracyos.markdown.flavored": "Editeur Markdown personnalisé de DemocracyOS",
   "forgot.error.email-not-valid": "Vous devez valider votre adresse email avant de pouvoir réinitialiser votre mot de passe",
   "forgot.explanation": "Vous allez recevoir par email un lien pour rétablir votre mot de passe",
