--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -180,9 +180,9 @@
   "comments.ordered-by": "Classement",
   "comments.removed": "Le commentaire a été supprimé",
   "comments.removing-argument": "Vous supprimez ce commentaire en tant qu'administrateur",
-  "comments.replies": "Résponses",
+  "comments.replies": "Réponses",
   "comments.replies.confirm-remove": "Voulez-vous supprimer cette réponse ?",
-  "comments.reply": "Répondre",
+  "comments.reply": "Réponse",
   "comments.reply-cannot-be-empty": "Votre réponse ne peut pas être vide",
   "comments.reply-to-argument": "Répondre à ce commentaire",
   "comments.score.not-allowed": "Vous ne pouvez pas voter sur votre propre commentaire",
