common sorts RC1 : backend - add random type - config for home, multi forum, sidebar and comments - add random sort for comment - no other UI mod
+ few fixes

--- a/lib/translations/lib/fi.json
+++ b/lib/translations/lib/fi.json
@@ -111,9 +111,6 @@
   "comments.send": "Lähetä",
   "comments.sign-in-required": "Sinun täytyy kirjautua sisään",
   "comments.sign-in-required-to-vote-comments": "Sinun täytyy olla kirjautunut sisään äänestää perustelut",
-  "comments.sorts.newest-first": "Uusin ensin",
-  "comments.sorts.oldest-first": "Vanhimmat ensin",
-  "comments.sorts.score": "Score",
   "comments.your-argument": "Sinun argumenttisi",
   "comments.your.arguments": "Sinun argumentit",
   "common.app-name": "DemocracyOS",
@@ -127,6 +124,11 @@
   "common.ok": "OK",
   "common.or": "tai",
   "common.read-more": "Lue lisää",
+  "common.sorts.closing-soon": "Suljetaan pian",
+  "common.sorts.newest-first": "Uusin ensin",
+  "common.sorts.oldest-first": "Vanhin ensin",
+  "common.sorts.recently-updated": "Äskettäin päivitetty",
+  "common.sorts.score": "Score",
   "democracyos.markdown.flavored": "DemocracyOS käytetty markdown",
   "forgot.error.email-not-valid": "Sinun täytyy vahvistaa sähköpostiosoitteesi ennen kuin voit nollata tilin salasanan",
   "forgot.explanation": "Lähetämme sähköpostin, mistä löydät linkin salasanasi uusimista varten",
@@ -269,10 +271,6 @@
   "signup.with-email": "Kirjaudu sähköpostilla",
   "signup.your-firstname": "Etunimesi",
   "signup.your-lastname": "Sukunimesi",
-  "sorts.closing-soon": "Suljetaan pian",
-  "sorts.newest-first": "Uusin ensin",
-  "sorts.oldest-first": "Vanhin ensin",
-  "sorts.recently-updated": "Äskettäin päivitetty",
   "validators.checked": "Vaadittu tarkastetaan kenttä",
   "validators.input.not-exists": "{name} elemen ei ole olemassa",
   "validators.invalid": "pätemätön",
