--- a/lib/translations/lib/nl.json
+++ b/lib/translations/lib/nl.json
@@ -111,9 +111,6 @@
   "comments.send": "Versturen",
   "comments.sign-in-required": "Je moet aangemeld zijn om te reageren",
   "comments.sign-in-required-to-vote-comments": "Je moet ingelogd zijn om argumenten te kwalificeren",
-  "comments.sorts.newest-first": "Nieuwste eerst",
-  "comments.sorts.oldest-first": "Oudste eerst",
-  "comments.sorts.score": "Relevantie",
   "comments.your-argument": "Jouw opmerking",
   "comments.your.arguments": "Jouw opmerkingen",
   "common.app-name": "DemocracyOS",
@@ -127,6 +124,11 @@
   "common.ok": "OK",
   "common.or": "of",
   "common.read-more": "Verder lezen",
+  "common.sorts.closing-soon": "Sluit binnenkort",
+  "common.sorts.newest-first": "Nieuwste eerst",
+  "common.sorts.oldest-first": "Oudste eerst",
+  "common.sorts.recently-updated": "Recentelijk aangepast",
+  "common.sorts.score": "Relevantie",
   "democracyos.markdown.flavored": "DemocracyOS flavored markdown",
   "forgot.error.email-not-valid": "Vous devez valider votre adresse de courriel avant vous pouvez réinitialiser votre mot de passe",
   "forgot.explanation": "We sturen je een link om je wachtwoord opnieuw in te stellen",
@@ -269,10 +271,6 @@
   "signup.with-email": "Meld je aan met je e-mailadres",
   "signup.your-firstname": "Je voornaam",
   "signup.your-lastname": "Je achternaam",
-  "sorts.closing-soon": "Sluit binnenkort",
-  "sorts.newest-first": "Nieuwste eerst",
-  "sorts.oldest-first": "Oudste eerst",
-  "sorts.recently-updated": "Recentelijk aangepast",
   "validators.checked": "Verplicht gecontroleerd veld",
   "validators.input.not-exists": "{name} element bestaat niet",
   "validators.invalid": "Ongeldig",
