--- a/lib/translations/lib/ru.json
+++ b/lib/translations/lib/ru.json
@@ -111,9 +111,6 @@
   "comments.send": "Отправить",
   "comments.sign-in-required": "Вы должны зарегистрироваться чтобы здесь дискутировать",
   "comments.sign-in-required-to-vote-comments": "Вы должны войти чтобы поддержать или отклонить",
-  "comments.sorts.newest-first": "Новые сначала",
-  "comments.sorts.oldest-first": "Старые сначала",
-  "comments.sorts.score": "Актуальность",
   "comments.your-argument": "Ваш аргумент",
   "comments.your.arguments": "Ваши аргументы",
   "common.app-name": "DemocracyOS",
@@ -127,6 +124,11 @@
   "common.ok": "ОК",
   "common.or": "или",
   "common.read-more": "Читать далее",
+  "common.sorts.closing-soon": "Закрываются скоро",
+  "common.sorts.newest-first": "Новые сначала",
+  "common.sorts.oldest-first": "Старые сначала",
+  "common.sorts.recently-updated": "Недавно обновленные",
+  "common.sorts.score": "Актуальность",
   "democracyos.markdown.flavored": "Система выделения в DemocracyOS",
   "forgot.error.email-not-valid": "Вы должны подтвердить свой адрес электронной почты, прежде чем вы можете восстановить ваш пароль",
   "forgot.explanation": "Мы вышлем Вам письмо со ссылкой для восстановления пароля",
@@ -269,10 +271,6 @@
   "signup.with-email": "Регистрация с электронной почтой",
   "signup.your-firstname": "Ваше имя",
   "signup.your-lastname": "Ваша Фамилия",
-  "sorts.closing-soon": "Закрываются скоро",
-  "sorts.newest-first": "Новые сначала",
-  "sorts.oldest-first": "Старые сначала",
-  "sorts.recently-updated": "Недавно обновленные",
   "validators.checked": "Выделеные поля обязательны",
   "validators.input.not-exists": "{name} элемент не существует",
   "validators.invalid": "Неверный",
