--- a/lib/translations/lib/sv.json
+++ b/lib/translations/lib/sv.json
@@ -111,9 +111,6 @@
   "comments.send": "Skicka",
   "comments.sign-in-required": "Du måste vara inloggad för att få argumentera här",
   "comments.sign-in-required-to-vote-comments": "Du måste vara inloggad för att få gilla/ogilla argument",
-  "comments.sorts.newest-first": "Senaste först",
-  "comments.sorts.oldest-first": "Tidigaste först",
-  "comments.sorts.score": "Relevans",
   "comments.your-argument": "Ditt argument",
   "comments.your.arguments": "Dina argument",
   "common.app-name": "DemocracyOS",
@@ -127,6 +124,11 @@
   "common.ok": "OK",
   "common.or": "eller",
   "common.read-more": "Läs mer",
+  "common.sorts.closing-soon": "Låses snart",
+  "common.sorts.newest-first": "Senaste först",
+  "common.sorts.oldest-first": "Tidigaste först",
+  "common.sorts.recently-updated": "Nyligen uppdaterad",
+  "common.sorts.score": "Relevans",
   "democracyos.markdown.flavored": "DemocracyOS:s markdown",
   "forgot.error.email-not-valid": "Du måste bekräfta din e-postadress innan du kan återställa ditt lösenord",
   "forgot.explanation": "Vi kommer skicka en länk för att återställa ditt lösenord",
@@ -269,10 +271,6 @@
   "signup.with-email": "Registrera med email-adress",
   "signup.your-firstname": "Ditt förnamn",
   "signup.your-lastname": "Ditt efternamn",
-  "sorts.closing-soon": "Låses snart",
-  "sorts.newest-first": "Senaste först",
-  "sorts.oldest-first": "Tidigaste först",
-  "sorts.recently-updated": "Nyligen uppdaterad",
   "validators.checked": "Nödvändigt ikryssat fält",
   "validators.input.not-exists": "{name} existerar inte",
   "validators.invalid": "Ogiltig(t)",
