--- a/lib/translations/lib/de.json
+++ b/lib/translations/lib/de.json
@@ -111,9 +111,6 @@
   "comments.send": "Absenden",
   "comments.sign-in-required": "Du musst angemeldet sein, um hier argumentieren zu können",
   "comments.sign-in-required-to-vote-comments": "Du musst angemeldet sein, um Argumente zu qualifizieren",
-  "comments.sorts.newest-first": "Neueste zuerst",
-  "comments.sorts.oldest-first": "Älteste zuerst",
-  "comments.sorts.score": "Wichtigkeit",
   "comments.your-argument": "Dein Argument",
   "comments.your.arguments": "Deine Argumente",
   "common.app-name": "DemocracyOS",
@@ -127,6 +124,11 @@
   "common.ok": "OK",
   "common.or": "oder",
   "common.read-more": "Mehr lesen",
+  "common.sorts.closing-soon": "Bald endend",
+  "common.sorts.newest-first": "Neueste zuerst",
+  "common.sorts.oldest-first": "Älteste zuerst",
+  "common.sorts.recently-updated": "Kürzlich aktualisiert",
+  "common.sorts.score": "Wichtigkeit",
   "democracyos.markdown.flavored": "Textformatierung",
   "forgot.error.email-not-valid": "Sie müssen Ihre E-Mail-Adresse zu bestätigen, bevor Sie Ihren Account Passwort zurücksetzen",
   "forgot.explanation": "Du erhältst eine E-Mail mit einem Link, um dein Passwort zurückzusetzen",
@@ -269,10 +271,6 @@
   "signup.with-email": "Mit E-Mail-Adresse anmelden",
   "signup.your-firstname": "Vorname",
   "signup.your-lastname": "Nachname",
-  "sorts.closing-soon": "Bald endend",
-  "sorts.newest-first": "Neueste zuerst",
-  "sorts.oldest-first": "Älteste zuerst",
-  "sorts.recently-updated": "Kürzlich aktualisiert",
   "validators.checked": "Pflichtfeld überprüft",
   "validators.input.not-exists": "{name} Element ist nicht vorhanden",
   "validators.invalid": "Ungültig",
