comment `read more` link + UI sorts on comment and topic sidebar

--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -207,7 +207,8 @@
   "common.ok": "Ok",
   "common.or": "ou",
   "common.pass-match-error": "Ne correspondent pas.",
-  "common.read-more": "Lire la suite",
+  "common.read-more": "Lire plus",
+  "common.read-less": "Lire moins",
   "common.sorts.by-title-asc": "titre de A -> Z",
   "common.sorts.closing-soon": "clôture proche",
   "common.sorts.newest-first": "plus récents d'abord",
